# sphinxcontrib-gitinclude

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: pypi.yml  sphinx.yml  update_version_file.yml
_sources/: index.md.txt
docs/: conf.py  index.md
gitinclude/: __init__.py
