[metadata]
name = gitinclude
version = 0.2.2
license = Apache-2.0
license_file = LICENSE
author = ousttrue
author_email = ousttrue@gmail.com
url = https://github.com/ousttrue/sphinxcontrib-git_include
maintainer = ousttrue
keywords = sphinx, sphinxcontrib
description = literalinclude from git repository.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
        Development Status :: 4 - Beta
        Framework :: Sphinx :: Extension
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Topic :: Documentation :: Sphinx

[options]
include_package_data = True
packages = find:
# test_suite = tests.suites
install_requires = Sphinx

[options.packages.find]

[options.entry_points]
